fix: update dockerfile